--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.1.2",
+    "firebase": "^9.6.9",
+    "firebase-admin": "^10.0.2",
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.12"
